--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     
     <div class="wrapper">
         <div class="center">
-            <p>Тебе есть 18?</p>
-            <a class="yes" id="link" >Да</a>
+            <p>Are you over 18 years old?</p>
+            <a class="yes" id="link" >YES</a>
         </div>
     </div>
     
