--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Проверка возраста</title>
+    <title></title>
     <style>
         body,
         button {
@@ -182,7 +182,7 @@
             <h1 class="headline-text headline-fontcolor"></h1>
             <div class="message-text message-fontcolor">Are you over 18 years old?</div>
             <div class="call-to-action">
-                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://vk.cc/aroptY"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">YES</span> </button></a>
+                <section class="button-section"> <a class="destination-target_url" id="destination_url" href="https://vk.cc/arqipl"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">YES</span> </button></a>
                 </section>
             </div>
         </section>
